@@ -498,9 +498,13 @@ cp ../juife-0.4a/lib/juife.jar lib/required/juife.jar</command></literallayout><
     <para>Note that when stopping LinuxSampler all MIDI instrument mappings
     are gone forever, so it is crucial to export the MIDI instrument maps
     before quiting your session to be able to load them again next time you
-    start LinuxSampler. This can be done by choosing
-    <guimenu>Actions</guimenu>/<guimenu>Export</guimenu>/<guimenu>MIDI
-    Instrument Maps</guimenu>.</para>
+    start LinuxSampler. This can be done by choosing <menuchoice>
+        <guimenu>Actions</guimenu>
+
+        <guisubmenu>Export</guisubmenu>
+
+        <guimenuitem>MIDI Instrument Maps</guimenuitem>
+      </menuchoice>.</para>
 
     <section>
       <title>Managing MIDI Instrument Maps</title>
@@ -573,6 +577,40 @@ cp ../juife-0.4a/lib/juife.jar lib/required/juife.jar</command></literallayout><
 
       <para><graphic fileref="images/assign-midi-map.png" /></para>
     </section>
+
+    <section id="MIDI_INSTRUMENTS_EXPORT">
+      <title>Exporting MIDI Instrument Maps</title>
+
+      <para>Currently, MIDI instrument maps can be exported as:</para>
+
+      <para><itemizedlist>
+          <listitem>
+            <para>LSCP script (*.lscp)</para>
+          </listitem>
+
+          <listitem>
+            <para>Text file (*.txt) - suitable for printing</para>
+          </listitem>
+
+          <listitem>
+            <para>Web page (*.html) - suitable for browsing</para>
+          </listitem>
+
+          <listitem>
+            <para>Rosegarden device file (*.rgd)</para>
+          </listitem>
+        </itemizedlist>To export the current list of MIDI instruments, choose
+      <menuchoice>
+          <guimenu>Actions</guimenu>
+
+          <guisubmenu>Export</guisubmenu>
+
+          <guimenuitem>MIDI Instrument Maps</guimenuitem>
+        </menuchoice>. You can specify the file format by entering the file
+      extension or by selecting the desired file type from the list. If the
+      file type is not specified and file extension is not entered, the
+      default format is LSCP script.</para>
+    </section>
   </chapter>
 
   <chapter id="INSTRUMENTS_DATABASE">
@@ -621,24 +659,32 @@ cp ../juife-0.4a/lib/juife.jar lib/required/juife.jar</command></literallayout><
     <section>
       <title>Adding Instruments To The Instruments Database</title>
 
-      <para>Choose <guimenu>Window</guimenu>/<guimenu>Instruments
-      Database</guimenu> to bring up the Instruments Database window, or click
+      <para>Choose <menuchoice>
+          <guimenu>Window</guimenu>
+
+          <guimenuitem>Instruments Database</guimenuitem>
+        </menuchoice> to bring up the Instruments Database window, or click
       the corresponding tool button. Initialy, the instruments database is
       empty, so you should manually create the desired directories and add
       instruments to them.</para>
 
       <para>To create a new directory, select the directory, in which the new
-      directory should be created and choose
-      <guimenu>Actions</guimenu>/<guimenu>Create Directory</guimenu>, or
-      right-click a blank area and choose <guimenuitem>Create
-      Directory</guimenuitem>.</para>
+      directory should be created and choose <menuchoice>
+          <guimenu>Actions</guimenu>
+
+          <guimenuitem>Create Directory</guimenuitem>
+        </menuchoice>, or right-click a blank area and choose
+      <guimenuitem>Create Directory</guimenuitem>.</para>
 
       <para>To add instruments to specific instruments database directory, go
-      to that directory and select <guimenu>Actions</guimenu>/<guimenu>Add
-      Instruments</guimenu> submenu, where you have two options - to scan a
-      specific instrument file and add the instruments in that file to the
-      instruments database or scan a file system directory for instrument
-      files and add the instruments to the instruments database.</para>
+      to that directory and select <menuchoice>
+          <guimenu>Actions</guimenu>
+
+          <guimenuitem>Add Instruments</guimenuitem>
+        </menuchoice> submenu, where you have two options - to scan a specific
+      instrument file and add the instruments in that file to the instruments
+      database or scan a file system directory for instrument files and add
+      the instruments to the instruments database.</para>
     </section>
 
     <section>
@@ -646,29 +692,42 @@ cp ../juife-0.4a/lib/juife.jar lib/required/juife.jar</command></literallayout><
 
       <para>Basic commands:</para>
 
-      <para><command>Cut</command> -
-      <guimenu>Edit</guimenu>/<guimenu>Cut</guimenu>, or right-click on a
-      selected file or directory and choose <guibutton>Cut,</guibutton> or
-      Ctrl+X</para>
+      <para><command>Cut</command> - <menuchoice>
+          <guimenu>Edit</guimenu>
 
-      <para><command>Copy</command> -
-      <guimenu>Edit</guimenu>/<guimenu>Copy</guimenu>, or right-click on a
-      selected file or directory and choose <guibutton>Copy,</guibutton> or
-      Ctrl+C</para>
+          <guimenuitem>Cut</guimenuitem>
+        </menuchoice>, or right-click on a selected file or directory and
+      choose <guibutton>Cut,</guibutton> or Ctrl+X</para>
 
-      <para><command>Paste</command> -
-      <guimenu>Edit</guimenu>/<guimenu>Paste</guimenu>, or right-click a blank
-      area and choose <guibutton>Paste,</guibutton> or Ctrl+V</para>
+      <para><command>Copy</command> - <menuchoice>
+          <guimenu>Edit</guimenu>
 
-      <para><command>Rename</command> -
-      <guimenu>Edit</guimenu>/<guimenu>Rename</guimenu>, or right-click on a
-      selected file or directory and choose <guibutton>Rename,</guibutton> or
-      press <command>F2</command></para>
+          <guimenuitem>Copy</guimenuitem>
+        </menuchoice>, or right-click on a selected file or directory and
+      choose <guibutton>Copy,</guibutton> or Ctrl+C</para>
 
-      <para><command>Delete</command> -
-      <guimenu>Actions</guimenu>/<guimenu>Delete</guimenu>, or right-click on
-      a selected file or directory and choose <guibutton>Delete,</guibutton>
-      or press the <command>Delete</command> key from the keyboard</para>
+      <para><command>Paste</command> - <menuchoice>
+          <guimenu>Edit</guimenu>
+
+          <guimenuitem>Paste</guimenuitem>
+        </menuchoice>, or right-click a blank area and choose
+      <guibutton>Paste,</guibutton> or Ctrl+V</para>
+
+      <para><command>Rename</command> - <menuchoice>
+          <guimenu>Edit</guimenu>
+
+          <guimenuitem>Rename</guimenuitem>
+        </menuchoice>, or right-click on a selected file or directory and
+      choose <guibutton>Rename,</guibutton> or press
+      <command>F2</command></para>
+
+      <para><command>Delete</command> - <menuchoice>
+          <guimenu>Actions</guimenu>
+
+          <guimenuitem>Delete</guimenuitem>
+        </menuchoice>, or right-click on a selected file or directory and
+      choose <guibutton>Delete,</guibutton> or press the
+      <command>Delete</command> key from the keyboard</para>
 
       <para><tip>
           <para>This commands also work on a multiple selection.</para>
@@ -722,8 +781,11 @@ cp ../juife-0.4a/lib/juife.jar lib/required/juife.jar</command></literallayout><
     <section>
       <title>Finding Instruments</title>
 
-      <para>To start a search, choose
-      <guimenu>Edit</guimenu>/<guimenu>Find</guimenu>, or Ctrl+F.</para>
+      <para>To start a search, choose <menuchoice>
+          <guimenu>Edit</guimenu>
+
+          <guimenuitem>Find</guimenuitem>
+        </menuchoice>, or Ctrl+F.</para>
     </section>
   </chapter>
 </book>
