@@ -21,6 +21,7 @@ view.toolBar = Toolbar
 view.leftSidePane = Left-Side Pane
 view.rightSidePane = Right-Side Pane
 view.midiKeyboard = MIDI Keyboard
+view.alwaysOnTop = Always On Top
 
 channels = Channels
 channels.newChannel = New Channel
